<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:id="@+id/textView2"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lbCiudad"
                android:id="@+id/lbCiudad"
                android:layout_marginTop="13dp"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/slcPickUp"
                android:spinnerMode="dropdown"
                />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbPickUp"
                android:id="@+id/lbPickUp"
                android:layout_below="@+id/slcPickUp"
                android:layout_alignLeft="@+id/lbPickUpFecha"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slc_pick_up"
                android:layout_below="@+id/lbPickUp"
                android:layout_alignLeft="@+id/lbPickUp"
                android:layout_marginTop="11dp"/>
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbPickUpFecha"
                android:id="@+id/lbPickUpFecha"
                android:layout_alignTop="@+id/lbPickUpHora"
                android:layout_alignLeft="@+id/lbCiudad"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbPickUpHora"
                android:id="@+id/lbPickUpHora"
                android:layout_below="@+id/spinner4"
                android:layout_alignLeft="@+id/slcPickUp"
                android:layout_marginTop="10dp"/>

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_marginTop="39dp"
                android:layout_below="@+id/lbPickUpFecha"
                android:layout_alignLeft="@+id/lbPickUpFecha"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slc_pick_up_hora"
                android:layout_alignTop="@+id/editText"
                android:layout_alignRight="@+id/slcPickUp"
                android:layout_alignLeft="@+id/lbPickUpHora"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slc_pick_up_min"
                android:layout_alignTop="@+id/spinner2"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/spinner2"/>
    </LinearLayout>



    <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbDropOff"
                android:id="@+id/lbDropOff"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/spinner2"
                android:layout_alignLeft="@+id/editText"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:layout_below="@+id/lbDropOff"
                android:layout_alignLeft="@+id/lbDropOff"
                android:layout_marginTop="11dp"/>
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbDropOffFecha"
                android:id="@+id/lbDropOffFecha"
                android:layout_below="@+id/spinner5"
                android:layout_alignLeft="@+id/spinner5"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbDropOffHora"
                android:id="@+id/lbDropOffHora"
                android:layout_marginLeft="12dp"
                android:layout_below="@+id/spinner5"
                android:layout_toRightOf="@+id/lbDropOffFecha"/>
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal" >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/lbDropOffFecha"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner6"
                android:layout_alignTop="@+id/editText2"
                android:layout_alignLeft="@+id/lbDropOffHora"
                android:layout_toLeftOf="@+id/spinner3"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner7"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/lbDropOffHora"/>
    </LinearLayout>


</RelativeLayout>
